# sequence_storages

./: README.md  pyproject.toml
sequence_storages/: __init__.py  base_storage.py  fasta_storage.py  folder_storage.py  tar_storage.py  utils.py
tests/: test_write_read.py
